--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-html, body {
+/* html, body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
@@ -12,4 +12,43 @@ a {
 
 * {
   box-sizing: border-box;
+} */
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap");
+body {
+  margin: 0;
+  line-height: normal;
+}
+:root {
+  /* fonts */
+  --text-sm-lineheight-5-font-bold: Inter;
+  --font-roboto: Roboto;
+
+  /* font sizes */
+  --text-sm-lineheight-5-font-bold-size: 14px;
+  --font-size-base: 16px;
+
+  /* Colors */
+  --white: #fff;
+  --cyan-300: #76e4f7;
+  --gray-200: #e2e8f0;
+  --gray-400: #a0aec0;
+  --blue-500: #3182ce;
+
+  /* Gaps */
+  --gap-5xs: 8px;
+
+  /* Paddings */
+  --padding-xs: 12px;
+  --padding-base: 16px;
+  --padding-21xl: 40px;
+
+  /* Border radiuses */
+  --br-xs: 12px;
+  --br-7xs: 6px;
+  --br-9xs: 4px;
+
+  /* Effects */
+  --base: 0px 1px 3px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.06);
 }
