--- a/styles/Login.module.css
+++ b/styles/Login.module.css
@@ -1,23 +1,26 @@
 .container{
     display: flex;
-    border: 1px solid black;
+    border: 1px solid #E2E8F0;
     border-radius: 12px;
     width: 1280px;
     height: 900px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-inline: 200px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-left: 300px;
+    /* flex-direction: column; */
+    align-items: center;
+    /* justify-content: center; */
 }
 
 .logo{
-background-color: #76E4F7;
-width: 435px;
-height: 900px;
-align-items: center;
-justify-content: center;
-display: flex;
-border-top-left-radius: 12px;
-border-bottom-left-radius: 12px;
+    background-color: #76E4F7;
+    width: 435px;
+    height: 899px;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    border-top-left-radius: 12px;
+    border-bottom-left-radius: 12px;
 }
 
 .form_login{
@@ -31,6 +34,8 @@ border-bottom-left-radius: 12px;
     display: flex;
     align-items: center;
     flex-direction: column;
+    /* margin-right: 80px; */
+    margin-left: 140px;
 }
 
 .logoSintec1Icon {
@@ -59,3 +64,7 @@ border-bottom-left-radius: 12px;
     flex-direction: column;
     display: flex;
 }
+
+/* .icon{
+    align-items: top !important;
+} */
