--- a/type/sintec-type/src/styles/Table.module.css
+++ b/type/sintec-type/src/styles/Table.module.css
@@ -1,7 +1,11 @@
-.containerTable{
+.containerTable {
     margin-top: 20px;
-    margin-right:15px;
-    background-color:white;
-    border-radius:12px;
-    height: 60%;
+    margin-right: 5px;
+    background-color: white;
+    border-radius: 12px;
+}
+
+.input_file::placeholder {
+    color: red;
+    background-color: black;
 }
