--- a/type/sintec-type/src/styles/Table.module.css
+++ b/type/sintec-type/src/styles/Table.module.css
@@ -1,11 +1,8 @@
 .containerTable {
     margin-top: 20px;
-    margin-right: 5px;
+    margin-right: 15px;
     background-color: white;
     border-radius: 12px;
+    margin-bottom:20px;
 }
 
-.input_file::placeholder {
-    color: red;
-    background-color: black;
-}
