--- a/type/sintec-type/src/styles/Table.module.css
+++ b/type/sintec-type/src/styles/Table.module.css
@@ -1,8 +1,14 @@
 .containerTable {
-    margin-top: 20px;
+    max-height: 70%;
+    overflow-y: "auto"; 
+    overflow-x:"auto";
+    margin-top:20px;
     margin-right: 15px;
-    background-color: white;
     border-radius: 12px;
-    margin-bottom:20px;
 }
 
+.tabela {
+    background-color: white;
+    width: 100%;
+    border-radius: 12px;
+}
